# Conductor-Dashboard

./: CLAUDE.md  Cargo.toml  README.md  mcp
.github/workflows/: ci.yml
conductor/: product-guidelines.md  product.md  refactoring_opportunities.md  tech-stack.md  tracks.md  tracks.md.bak  user_identity_flow.md  workflow.md
conductor/archive/gui_audit_testing_20251224/: metadata.json  plan.md  spec.md
conductor/archive/legacy_agent_docs_20251230/: DB_AGENT.md  SLACK_AGENT.md
conductor/archive/legacy_plans_20251230/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PHASE_2.md  ORIGINAL_IMPORVEMENT_PLAN.md  PAD spec (2).docx  PRODUCTION_READY_PLAN.md  REMEDIATION_PLAN.md
conductor/code_styleguides/: python.md
conductor/tracks/advanced_instrument_validation_20260115/: meta.yaml  plan.md  spec.md
conductor/tracks/advanced_slack_integration_20251223/: meta.yaml  metadata.json  plan.md  spec.md
conductor/tracks/align_confluence_restricted_list_to_inst_symbol_20260203/: metadata.json  plan.md  spec.md
conductor/tracks/auth_failure_ui_20260124/: meta.yaml  metadata.json  plan.md  spec.md
conductor/tracks/authoritative_identity_refactor_20260130/: meta.yaml  plan.md  spec.md
conductor/tracks/chatbot_architecture_hardening_20251231/: plan.md  (+3 more)
docs/: RATATUI_REFACTOR.md  REWRITE_PLAN.md
src/: app.rs  event.rs  lib.rs  main.rs
src/mcp/: mod.rs  service.rs  types.rs
src/model/: cache.rs  enums.rs  mod.rs  track.rs
src/parser/: error.rs  index.rs  metadata.rs  mod.rs  plan.rs
src/theme/: colors.rs  mod.rs
tests/: mcp_tests.rs  model_tests.rs  parser_tests.rs
(+294 files in other folders)
