[package]
name = "conductor-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime + utilities
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Parsing
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
